crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__falcon_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
System: You are a Rust expert.

User: How does borrowing work?
Falcon:
