crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__fim_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<fim_prefix>def sort(arr):<fim_suffix>return result<fim_middle>
