crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__fim_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<fim_prefix>def fibonacci(n):<fim_suffix>return result<fim_middle>
