crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__gemma2_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<start_of_turn>user
You are a Rust expert.

How does borrowing work?<end_of_turn>
<start_of_turn>model
