crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__gemma_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<start_of_turn>user
Explain photosynthesis briefly.<end_of_turn>
<start_of_turn>model
