crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__gemma_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<start_of_turn>user
You are a science tutor.

What is ATP?<end_of_turn>
<start_of_turn>model
