crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__granite_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|start_of_role|>system<|end_of_role|>You are a Rust expert.
<|start_of_role|>user<|end_of_role|>How does borrowing work?
<|start_of_role|>assistant<|end_of_role|>
