crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__granite_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|start_of_role|>system<|end_of_role|>You are Granite, an AI language model developed by IBM.
<|start_of_role|>user<|end_of_role|>Explain photosynthesis briefly.
<|start_of_role|>assistant<|end_of_role|>
